// file: examples/queue_message.proto
// version: 1.0.0
// guid: 123e4567-e89b-12d3-a456-426614174004

edition = "2023";

package gcommon.v1.examples;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/examples";

/**
 * Example queue message demonstrating enum and complex validation patterns.
 */
message QueueMessage {
  // Message ID
  string message_id = 1 [(validate.rules).string.min_len = 1];

  // Queue name
  string queue_name = 2 [(validate.rules).string.min_len = 1];

  // Message content
  string content = 3 [(validate.rules).string.min_len = 1];

  // Priority level (0-10)
  int32 priority = 4 [(validate.rules).int32.gte = 0];

  // Retry count
  int32 retry_count = 5 [(validate.rules).int32.gte = 0];

  // Maximum retries allowed
  int32 max_retries = 6 [(validate.rules).int32.gte = 0];

  // Message TTL in seconds
  int32 ttl_seconds = 7 [(validate.rules).int32.gte = 0];

  // Content type
  string content_type = 8 [(validate.rules).string.min_len = 1];

  // Tags for message filtering
  repeated string tags = 9 [(validate.rules).repeated.min_items = 1];

  // Message size in bytes
  int64 size_bytes = 10 [(validate.rules).int64.gte = 0];
}

/**
 * Message priority levels.
 */
enum MessagePriority {
  MESSAGE_PRIORITY_UNSPECIFIED = 0;
  MESSAGE_PRIORITY_LOW = 1;
  MESSAGE_PRIORITY_NORMAL = 2;
  MESSAGE_PRIORITY_HIGH = 3;
  MESSAGE_PRIORITY_CRITICAL = 4;
}